add post trade for reuse and add TRADES POSTS table
